main.css
/* ... */
/* Opera < 12.1 */
@-o-keyframes fadein {
    from {
        opacity: 0;
        bottom: -100vh;
    }
    to {
        opacity: 1;
        bottom: 0;
    }
}
#exitIcon {
    font-size: x-large;
    font-weight: bold;
    position: absolute;
    padding: 10px;
    top: 0;
    right: 0;
    text-align: end;
    cursor: pointer;
}

.button, input[type="file"]::-webkit-file-upload-button {
    border-radius: .2em;
    background-color: var(--navBackground);
    padding: 1em;
    color: var(--headerFontColor) !important;
    font-weight: bold;
    cursor: pointer;
}
.button:hover, input[type="file"]::-webkit-file-upload-button:hover {
    background-color: var(--tertiaryBackground);
}
#submissionForm {
    margin-left: 30%;
    font-size: large;
}
.submissionField {
    display: grid;
    grid-template-columns: repeat(2, 50%);
    align-items: center;
}
.submissionField label {
    width: fit-content;
}
.submissionField input, .submissionField textarea, .submissionField select {
    max-width: 50%;
}

.verticalAlign {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}
.featuredWorks, #featuredIssues {
    display: grid;
    grid-template-columns: repeat(2, 50%);
}
.featuredWork, .featuredIssue {
    background-color: var(--secondaryBackground);
    margin: 5% 10%;
    transition: margin .5s;
    aspect-ratio: 2 / 1;
    text-align: center;
}
.featuredWork, .featuredIssue {
    visibility: hidden;
}
.featuredWork a, .featuredIssue a {
    position: absolute;
    padding: 1em;
    background-color: var(--tertiaryBackground);
}
.featuredWork:hover, .featuredIssue:hover {
    margin: 5%;
    transition: margin .5s;
}
/* https://stackoverflow.com/questions/22808040/fading-out-text-on-overflow-with-css-if-the-text-is-bigger-than-allowed */
.featuredWork .preview, .featuredIssue .preview {
    height: 100%;
    min-width: 100%;
    overflow: hidden;
    mask-image: linear-gradient(180deg, #000 60%, transparent);
}
.featuredWork .textPreview p {
    margin: 0;
    text-align: justify;
    text-overflow: ellipsis;
}
.featuredWork .textPreview img {
    display: none;
}
.featuredWork .imgPreview img, .featuredIssue .preview img {
    min-width: 100%;
    min-height: 100%;
    transition: transform 2s;
}
.featuredWork:hover .imgPreview img, .featuredIssue:hover .preview {
    transform: translate(-50%, -50%);
    transition: transform 2s;
}
.issueNav {
    list-style-type: none;
}
#backToTopIssue {
    position: fixed;
    bottom: 5px;
    right: .5em;
    background-color: var(--secondaryBackground);
    border-radius: 10px;
    padding: 5px;
    margin-right: 1em;
}
#backToTopIssue:hover {
    background-color: var(--shadowColor);
    color: white !important;    
}

.piece {
    padding-top: var(--mainMargin);
}
.piece img {
    max-width: 100%;
    max-height: 100vh;
}
.share img {
    margin: 1em;
    height: 2em;
}

#addedTags li {
    display: inline;
    padding: .3em;
    border-radius: 1em;
    cursor: pointer;
    margin: .3em;
    background-color: white;
}
#addedTags li:hover {
    background-color: lightgray;
}
.required {
    color: var(--requiredColor);
}

.teamMember {
    display: grid;
    grid-template-columns: 20% 80%;
    grid-template-rows: repeat(3, auto);
}
.teamPic {
    --padding: 1em;
    width: calc(100% - var(--padding) * 2);
    grid-row: 1 / 4;
    padding: var(--padding);
}

summary {
    margin: 0.3em 0 0.8em 0;
    list-style: none;
}
details {
    margin-bottom: 1em;
}
details[open] {
    margin-bottom: 2em;
}
details h2 {
    display: inline;
}
summary::-webkit-details-marker, summary::marker {
    display: none;
}
details .chevron {
    display: inline;
    transition: transform .5s;
    cursor: pointer;
}
details[open] .chevron {
    transition: transform .5s;
    transform: rotateX(180deg);
}
details p {
    margin-left: 5em;
}
/* ... */

